<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80545454"
        android:gravity="center">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/titleFame"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="-20dp"
            app:cardElevation="8dp"
            app:strokeWidth="0dp"
            app:cardBackgroundColor="@color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintDimensionRatio="1.56:0.40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <FrameLayout
                android:id="@+id/frameTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_title_dialog_loading">

                <TextView
                    android:id="@+id/txtTitle"
                    style="@style/single_marquee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:gravity="center"
                    android:text="@string/loading"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:strokeJoinStyle="miter" />

            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_dialog_loading"
            android:layout_marginHorizontal="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="3.12:1.72"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/txtContent1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:elevation="1dp"
                android:fontFamily="@font/cherry_bomb_regular"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/haven_t_saved_it_yet_do_you_want_to_exit"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone"
                android:textAllCaps="true"
                app:layout_constraintBottom_toTopOf="@+id/btnOk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

<!--            <ImageView-->
<!--                android:id="@+id/imgInBgDialog"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="0dp"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:scaleType="fitXY"-->
<!--                android:layout_marginVertical="12dp"-->
<!--                android:layout_marginHorizontal="15dp"-->
<!--                android:src="@drawable/img_in_exit"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

            <TextView
                android:id="@+id/txtContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/cherry_bomb_regular"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/haven_t_saved_it_yet_do_you_want_to_exit"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btnYes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="44dp"
                app:strokeWidth="0dp"
                android:visibility="gone"
                app:cardCornerRadius="0dp"
                app:cardBackgroundColor="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="0.88:0.44"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtContent1" >
            <TextView
                android:id="@+id/txtOk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cherry_bomb_regular"
                android:gravity="center"
                android:text="@string/ok"

                android:background="@drawable/bg_ok"
                android:textColor="@color/white"
                android:textSize="16sp"
                 />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnYes"
                app:strokeColor="@color/app_color2"
                app:cardBackgroundColor="@color/transparent"
                android:layout_width="0dp"
                android:layout_height="44dp"
                app:strokeWidth="0dp"
                app:cardCornerRadius="0dp"
                android:layout_marginStart="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="0.88:0.44"
                app:layout_constraintStart_toEndOf="@+id/btnNo"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txtContent" >
                <TextView
                    android:id="@+id/txtYes"
                    android:background="@drawable/bg_btn_loading_yes"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:textColor="@color/app_color2"
                    android:text="@string/tv_yes"
                     />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnNo"

                android:layout_width="0dp"
                android:layout_height="44dp"
                app:strokeWidth="0dp"
                app:cardCornerRadius="0dp"
                app:cardBackgroundColor="@color/transparent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="3dp"
                app:layout_constraintBottom_toBottomOf="@+id/btnYes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintDimensionRatio="0.88:0.44"
                app:layout_constraintEnd_toStartOf="@+id/btnYes"
                app:layout_constraintTop_toTopOf="@+id/btnYes">
                <TextView
                    android:background="@drawable/bg_btn_loading_no"
                    android:id="@+id/txtNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:gravity="center"
                    android:text="@string/tv_no"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    />

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>