<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_splash">
        <FrameLayout
            android:elevation="2dp"
            android:layout_marginBottom="-30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/contrain"
            app:layout_constraintEnd_toEndOf="@+id/contrain"
            app:layout_constraintStart_toStartOf="@+id/contrain">

            <include android:id="@+id/action_bar" layout="@layout/actionbar_custom" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:paddingVertical="45dp"
            android:background="@drawable/bg_20_stroker_color_pink"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/llLanguage"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/bg_permission_switch"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_lang_set"
                    android:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_more_set"
                    android:tint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRateUs"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_permission_switch"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/llLanguage">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_reate_set"
                    android:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:text="@string/rate_us"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_more_set"
                    android:tint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llShareApp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_permission_switch"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/llRateUs">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_share_set"
                    android:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:text="@string/share_app"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_more_set"
                    android:tint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPrivacy"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_permission_switch"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/llShareApp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_policy_set"
                    android:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:text="@string/privacy_amp_policy"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_more_set"
                    android:tint="@color/white" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>