<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_splash">

        <FrameLayout
            android:id="@+id/imvBack"
            android:layout_width="80dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/ic_back_app"
            android:elevation="2dp"
            app:layout_constraintDimensionRatio="0.8:0.44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:ellipsize="marquee"
                android:fontFamily="@font/cherry_bomb_regular"
                android:freezesText="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </FrameLayout>

<!--        <androidx.appcompat.widget.AppCompatImageView-->
<!--            android:id="@+id/imvEdit"-->
<!--            android:layout_width="37dp"-->
<!--            android:layout_height="37dp"-->
<!--            android:layout_marginEnd="22dp"-->
<!--            android:src="@drawable/imv_edit_2"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/imvBack"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/imvBack" />-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imvDelete"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/imv_delete1"
            app:layout_constraintBottom_toBottomOf="@id/imvBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imvBack" />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/white"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imvBack"
            app:strokeWidth="2dp"
            app:strokeColor="@color/app_color"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:visibility="visible"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            tools:layout_editor_absoluteX="8dp">

            <LinearLayout
                android:id="@+id/btnEditShareAll"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_share_view"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">

                <!--                <ImageView-->
                <!--                    android:layout_width="24dp"-->
                <!--                    android:layout_height="24dp"-->
                <!--                    android:src="@drawable/ic_share_my_creation" />-->

                <TextView
                    android:id="@+id/tvEditShare"
                    style="@style/single_marquee"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="3"
                    android:singleLine="true"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnDownload"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_share_view"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">

                <!--                <ImageView-->
                <!--                    android:layout_width="24dp"-->
                <!--                    android:layout_height="24dp"-->
                <!--                    android:src="@drawable/ic_download_mywork" />-->

                <TextView
                    android:id="@+id/tvDownload"
                    style="@style/single_marquee"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/cherry_bomb_regular"
                    android:textSize="20sp"
                    android:marqueeRepeatLimit="3"
                    android:singleLine="true"
                    android:text="@string/download"
                    android:textColor="@color/white"
                   />
            </LinearLayout>
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/imvDelete"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginHorizontal="25dp"-->
<!--            android:layout_marginBottom="100dp"-->
<!--            android:background="@drawable/bg_delete_view"-->
<!--            android:fontFamily="@font/cookies_regular"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/delete"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_marginTop="17dp"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/llBottom"-->
<!--            app:layout_constraintStart_toStartOf="@+id/llBottom"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/llBottom" />-->
        <!--    flNativeCollab-->
<!--        <FrameLayout-->
<!--            android:id="@+id/flNativeCollab"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintBottom_toBottomOf="parent">-->

<!--            <include layout="@layout/ads_shimmer_collap_native" />-->
<!--        </FrameLayout>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>